syntax = "proto3";

import "blockchain.proto";
import "common.proto";

package consensus;

message RichStatus {
  bytes hash = 1;
  uint64 height = 2;
  repeated bytes nodes = 3;
  uint64 interval = 4;
  uint32 version = 5;
}

message Message {
  common.NodeId node_id = 1;
  bytes data = 2;
}

service ConsensusService {
  rpc VerifyProof(blockchain.Proof) returns (common.Result);
  rpc ProcConsensusMessage(Message) returns (common.Result);
  rpc SetStatus(RichStatus) returns (common.Result);
}
