syntax = "proto3";

import "blockchain.proto";
import "common.proto";

package sync;

message Status {
  common.NodeId node_id = 1;

  uint64 height = 2;
  bytes block_hash = 3;
}

message SyncRequest {
  common.NodeId node_id = 1;

  uint64 start_height = 2;
  uint64 end_height = 3;
}

message SyncResp {
  common.Result result = 1;
  common.NodeId node_id = 2;

  repeated blockchain.Block blocks = 3;
}

message PeerCountResp {
  common.Result result = 1;
  uint64 peer_count = 2;
}

service SyncService {
  rpc UpdateStatus(Status) returns (common.Result);
  rpc ProcSyncRequest(SyncRequest) returns (SyncResp);
  rpc ProcSyncResponse(SyncResp) returns (common.Result);
  rpc GetPeerCount(common.Empty) returns (PeerCountResp);
}
